# aetherio

./: .gitignore  ANDROID_TV.md  README.md  index.html  latest.json  package-lock.json  package.json  project-snapshot-part1.txt  project-snapshot-part2.txt  project-snapshot.txt  scan-project.ps1  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
public/: seanime-typescript-deps.js
scripts/: android-build-apk-copy.ps1  build-provider-runtime.mjs  generate-badges.mjs  install-mpv.ps1  publish-release.ps1
src/: App.css  App.tsx  index.css  main.tsx  queryClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android-tv/: AetherioPlayerPlugin.kt  AndroidManifest.tv-snippet.xml  README.md  build.gradle.media3-snippet.kts
src-tauri/capabilities/: default.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: LICENSE.txt  installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/icons/: icon.icns
src-tauri/src/p2p/: chunk_store.rs  mod.rs  tracker.rs  webrtc.rs
src-tauri/src/scraper/: adapters.rs  cineby.rs  generic.rs  http.rs  mod.rs  okru.rs  provider_http.rs  sites.rs
src/config/: apiKeys.ts  homePreferences.ts  mdblist.ts  playbackPreferences.ts  quickStart.ts  sourcePreferences.ts
src/hooks/: useAiringSchedule.ts  useCatalogs.ts  useHistory.ts  useLibrary.ts  useOriginalLanguage.ts  usePlayer.ts  useProfileGradient.ts  useRefreshRate.ts  useScrapedStreams.ts  useSearch.ts  useStreams.ts  useSubtitles.ts  useYouTubePlayer.ts
src/pages/: ProfileOnboarding.tsx  ProfileSelection.css  ProfileSelection.tsx  QuickStart.tsx
src/runtime/: platform.ts
src/services/: MDBListService.ts  (+9 more)
(+76 files in other folders)
