[package]
name = "aetherio"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aetherio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libloading = "0.8"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
scraper = "0.20"
regex = "1"
urlencoding = "2"
base64 = "0.22"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
tauri-plugin-process = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
librqbit = { version = "8.1.1", default-features = false, features = ["http-api", "default-tls", "tracing-subscriber-utils"] }
tauri-plugin-updater = "2"
